--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Acheronte",
-  "description": "WiFi Strength - Battery Level - Refresh Button visualizer",
+  "name": "Full Screen Helper",
+  "description": "Battery Level, Refresh Button visualizer, Auto refresher on load error",
   "version": "0.0.1",
 
   "permissions": [
@@ -10,6 +10,13 @@
     "webRequest",
     "*://*/*"
   ],
+
+  "icons": 
+  { 
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png" 
+  },
 
   "background": {
     "persistent": true,
