--- a/native/src/host_application/host_application/host_application.vcxproj.filters
+++ b/native/src/host_application/host_application/host_application.vcxproj.filters
@@ -18,6 +18,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="registrymanager.hpp">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="configmanager.hpp">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
     <ClInclude Include="stdafx.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
@@ -26,10 +35,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="host_application.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="host_application.cpp">
+    <ClCompile Include="registrymanager.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="configmanager.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
