--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -73,7 +73,7 @@
         "scripts/injector.js"
       ],
       "css": ["css/style.css", "css/font-awesome.css"],
-      "run_at": "document_start"
+      "run_at": "document_idle"
     }
   ],
 
