--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -62,6 +62,7 @@
         "scripts/injector/makers/battery_maker.js",
         "scripts/injector/makers/reload_maker.js",
         "scripts/injector/makers/wifi_maker.js",
+        "scripts/injector/makers/generic_maker.js",
 
         "scripts/injector/managers/base_manager_injector.js",
         "scripts/injector/managers/config_manager_injector.js",
