Remove infinite tada animation

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Full Screen Helper",
   "description": "Dockbar for pages running in full screen mode",
-  "version": "1.0.4",
+  "version": "1.0.4b",
 
   "permissions": [
     "tabs",
